; ModuleID = '/home/carl/AnghaBench/h2o/lib/http3/extr_qpack.c_h2o_qpack_decoder_send_state_sync.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/http3/extr_qpack.c_h2o_qpack_decoder_send_state_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @h2o_qpack_decoder_send_state_sync(%struct.TYPE_3__* %0, i64* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i64 0, i64* %3, align 8
  br label %28

12:                                               ; preds = %2
  %13 = load i64*, i64** %5, align 8
  store i64* %13, i64** %6, align 8
  %14 = load i64*, i64** %6, align 8
  store i64 0, i64* %14, align 8
  %15 = load i64*, i64** %6, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i64* @h2o_hpack_encode_int(i64* %15, i32 %18, i32 6)
  store i64* %19, i64** %6, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i32 0, i32* %21, align 4
  %22 = load i64*, i64** %6, align 8
  %23 = load i64*, i64** %5, align 8
  %24 = ptrtoint i64* %22 to i64
  %25 = ptrtoint i64* %23 to i64
  %26 = sub i64 %24, %25
  %27 = sdiv exact i64 %26, 8
  store i64 %27, i64* %3, align 8
  br label %28

28:                                               ; preds = %12, %11
  %29 = load i64, i64* %3, align 8
  ret i64 %29
}

declare dso_local i64* @h2o_hpack_encode_int(i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
